--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -20,7 +20,7 @@
 
             <img class="About-Us User-registration Ipad-logo-size logo-image"
                 src="../images/Logos/Transparent.png" alt="User Icon">
-            <a href="#">Online Store</a></p>
+            <a href="Dashboard.html" rel="external">Online Store</a></p>
             <label class="orange-label" for="username">Locations</label>
             <div class="mapouter">
                 <div class=" gmap_canvas"><iframe class="about-us" width="330" height="350" id="gmap_canvas"
