--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -64,11 +64,11 @@
                 </div>
 
                 <div class="mySlides fade">
-                    <img class="front-page-slides" src="../images/background1.png">
+                    <img class="front-page-slides" src="../images/items/1.png">
                 </div>
 
                 <div class="mySlides fade">
-                    <img class="front-page-slides" src="../images/background1.png">
+                    <img class="front-page-slides" src="../images/items/1.png">
                 </div>
 
                 <a data-theme="a" class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
