--- a/html/fashion.html
+++ b/html/fashion.html
@@ -19,7 +19,7 @@
     <div data-role="page" data-theme="d" id="page-content">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
-                <a data-rel="back"  class="btn-home ui-btn-none ui-btn ui-corner-all"  data-role="button" data-shadow="false" data-theme="none">
+                <a data-rel="back"  class="btn-home btn-home-removemgn ui-btn-none ui-btn ui-corner-all"  data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/icons/icons8-back-arrow-96.png" style="height: 29px!important;     margin-top: 3px;" border="0">
                 </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
@@ -46,7 +46,7 @@
             </ul>
         </div>
 
-        <div data-role="popup" id="cart-success" data-theme="" class="ui-corner-all" style="z-index: 9999;">
+        <div data-role="popup" id="cart-success-message" data-theme="" class="ui-corner-all" style="z-index: 9999999;">
             <div style="padding:10px 20px;">
                 <img style=" width: 200px;margin: auto;display: block;" src="../images/addtocart-success.gif" alt="">
                 <h2 style="color: #93dfca;">Item added to cart.</h2>
@@ -142,9 +142,7 @@
     <!-- /content -->
     </div>
 </body>
-<script type="text/javascript" src="../js/ProductPage.js"></script>
 <script type="text/javascript" src="../js/CategoryProducts.js"></script>
-<script type="text/javascript" src="../js/Categories.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
 
 <script>
