--- a/html/search.html
+++ b/html/search.html
@@ -45,6 +45,22 @@
                 <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Manga" rel="external">Manga</a></li>
             </ul>
         </div>
+
+        <div data-role="popup" id="cart-success-message" data-theme="" class="ui-corner-all" style="z-index: 9999999;">
+            <div style="padding:10px 20px;">
+                <img style=" width: 200px;margin: auto;display: block;" src="../images/addtocart-success.gif" alt="">
+                <h2 style="color: #93dfca;">Item added to cart.</h2>
+            </div>
+        </div>
+
+
+        <div data-role="popup" id="cart-error" data-theme="" class="ui-corner-all">
+            <div style="padding:10px 20px;">
+                <img style="width: 200px;margin: auto;display: block;" src="../images/AW331857_12.gif" alt="">
+                <h2 style="color: #ff647c;">Something went wrong.</h2>
+            </div>
+        </div>
+
         <div role="main" class="favourites ui-content">
 
 
