--- a/html/Catagories.html
+++ b/html/Catagories.html
@@ -22,7 +22,7 @@
                 <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/logos/Transparent.png" border="0">
                 </a>
-                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
+                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Categories</h3>
 
                 <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/icons/icons8-camera-24.png" border="0">
