--- a/html/ProductPage.html
+++ b/html/ProductPage.html
@@ -22,7 +22,7 @@
     <div data-role="page" data-theme="d" idPag="page-content">
         <div data-role="header" class="header-class">
            <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
-                <a data-rel="back"  class="btn-home ui-btn-none ui-btn ui-corner-all"  data-role="button" data-shadow="false" data-theme="none">
+                <a data-rel="back"  class="btn-home btn-home-removemgn ui-btn-none ui-btn ui-corner-all"  data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/icons/icons8-back-arrow-96.png" style="height: 29px!important;     margin-top: 3px;" border="0">
                 </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
