--- a/html/ForgotPassword.html
+++ b/html/ForgotPassword.html
@@ -17,24 +17,22 @@
 <body>
     <div data-role="page">
         <div role="main" class="login ui-content">
-            <img class="forgot-password Ipad-logo-size logo-image" src="../images/Logos/Transparent.png"
-                alt="">
+            <img class="forgot-password Ipad-logo-size logo-image" src="../images/Logos/Transparent.png" alt="">
 
             <label class="login-labels orange-label" for="username">Email</label>
             <input class="input-white-background" type="text" name="Email" id="Email" placeholder="Email" value="">
             <label class="login-labels orange-label" for="password">New Password</label>
-            <input class="input-white-background" type="text" name="New password" id="New password"
-                placeholder="NewPassword" value="">
+            <input class="input-white-background" type="text" name="New password" id="New password" placeholder="NewPassword" value="">
             <label class="login-labels orange-label" for="password">Confirm Password</label>
-            <input class="input-white-background" type="text" name="Confirm Password" id="Confirm Password"
-                placeholder="Confirm Password" value="">
+            <input class="input-white-background" type="text" name="Confirm Password" id="Confirm Password" placeholder="Confirm Password" value="">
 
             <div class=" button-container">
-                <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Reset Password</button>
+                <button onclick="resetPassword()" class="login-button ui-btn ui-btn-inline rounded-button">Reset Password</button>
             </div>
-            <p class="Register-Account-Text">Already have an account? <a href="../html/Login.html">Login NOW!</a></p>
+            <p class="Register-Account-Text">Already have an account? <a href="Login.html" rel="external">Login NOW!</a></p>
         </div>
     </div>
 </body>
+<script src="../js/main.js"></script>
 
 </html>
