--- a/html/Login.html
+++ b/html/Login.html
@@ -18,10 +18,9 @@
     <div data-role="page">
         <div role="main" class="login ui-content">
 
-            <div data-role="popup" id="server-error"  class="ui-corner-all">
+            <div data-role="popup" id="server-error" class="ui-corner-all">
                 <div style="padding:10px 20px;">
-                    <img style="width: 200px;margin: auto;display: block;" src="../images/fail.gif"
-                         alt="">
+                    <img style="width: 200px;margin: auto;display: block;" src="../images/fail.gif" alt="">
                     <h2 style="color: #ff647c;text-align: center">Something went wrong. Its not you it's us!</h2>
                 </div>
             </div>
@@ -31,30 +30,28 @@
             <p class="error-message" id="error-message"></p>
 
             <label class="login-labels orange-label" for="email"><span id="username-label">Email</span> <span class="error-message" id="username-error">Email Cannot be empty</span></label>
-            <input class="input-white-background" type="text" min="1" name="email" id="email" placeholder="Email"
-                value="">
+            <input class="input-white-background" type="text" min="1" name="email" id="email" placeholder="Email" value="">
             <label class="login-labels orange-label" for="password"><span id="password-label">Password</span> <span class="error-message" id="password-error">Password Cannot be empty</span></label>
-            <input class="input-white-background" type="password" min="1" name="password" id="password" placeholder="Password"
-                value="">
+            <input class="input-white-background" type="password" min="1" name="password" id="password" placeholder="Password" value="">
 
             <div class=" button-container">
                 <button onclick="doLogin()" id="login-btn" class="login-button ui-btn ui-btn-inline rounded-button">Login</button>
-                <div id="processing-btn" onclick="addReview()"
-                     class="ui-btn ui-shadow ui-corner-all login-processing login-button" >
-                    <img src="../images/loader.gif"
-                         style="display: inline-block;width: 33px;height: 33px;" alt="">
+                <div id="processing-btn" onclick="addReview()" class="ui-btn ui-shadow ui-corner-all login-processing login-button">
+                    <img src="../images/loader.gif" style="display: inline-block;width: 33px;height: 33px;" alt="">
                     <p class="processing-text">Processing</p>
                 </div>
             </div>
 
 
 
-            <a href="">Forgot Password?</a>
-            <p>Don't have an account? <a href="Register.html">Register NOW!</a></p>
+            <a href="ForgotPassword.html" rel="external">Forgot Password?</a>
+            <p>Don't have an account? <a href="Register.html" rel="external">Register NOW!</a></p>
         </div>
-    </div><!-- /content -->
+    </div>
+    <!-- /content -->
 </body>
 
 
 <script src="../js/main.js"></script>
+
 </html>
