--- a/html/Register.html
+++ b/html/Register.html
@@ -18,10 +18,9 @@
     <div data-role="page">
         <div role="main" class="login ui-content">
 
-            <div data-role="popup" id="server-error"  class="ui-corner-all">
+            <div data-role="popup" id="server-error" class="ui-corner-all">
                 <div style="padding:10px 20px;">
-                    <img style="width: 200px;margin: auto;display: block;" src="../images/fail.gif"
-                         alt="">
+                    <img style="width: 200px;margin: auto;display: block;" src="../images/fail.gif" alt="">
                     <h2 style="color: #ff647c;text-align: center">Something went wrong. Its not you it's us!</h2>
                 </div>
             </div>
@@ -33,31 +32,27 @@
             <p class="error-message" id="error-message"></p>
 
             <label class="login-labels orange-label" for="username"><span id="username-label">Username</span> <span class="error-message" id="username-error">Username Cannot be empty</span></label>
-            <input class="input-white-background" type="text" name="Username" id="username" placeholder="Username"
-                value="">
+            <input class="input-white-background" type="text" name="Username" id="username" placeholder="Username" value="">
 
             <label class="login-labels orange-label" for="email"><span id="email-label">Email</span> <span class="error-message" id="email-error">Email Cannot be empty</span></label>
             <input class="input-white-background" type="text" name="Email" id="email" placeholder="Email" value="">
 
             <label class="login-labels orange-label" for="password"><span id="password-label">Password</span> <span class="error-message" id="password-error">Password Cannot be empty</span></label>
-            <input class="input-white-background" type="password" name="password" id="password" placeholder="Password"
-                value="">
+            <input class="input-white-background" type="password" name="password" id="password" placeholder="Password" value="">
             <label class="login-labels orange-label" for="password"><span id="confpassword-label">Confirm Password</span> <span class="error-message" id="confpassword-error">Confirm Password Cannot be empty</span> <span class="error-message" id="confpassword-error-mis">Passwords do nnot match</span></label>
-            <input class="input-white-background" type="password" name="Confirm Password" id="confpassword"
-                placeholder="Confirm Password" value="">
+            <input class="input-white-background" type="password" name="Confirm Password" id="confpassword" placeholder="Confirm Password" value="">
 
             <div class=" button-container">
-                <button onclick="doRegister()"  id="login-btn"  class="login-button ui-btn ui-btn-inline rounded-button">Register</button>
-                <div id="processing-btn" onclick="addReview()"
-                     class="ui-btn ui-shadow ui-corner-all login-processing login-button" >
-                    <img src="../images/loader.gif"
-                         style="display: inline-block;width: 33px;height: 33px;" alt="">
+                <button onclick="doRegister()" id="login-btn" class="login-button ui-btn ui-btn-inline rounded-button">Register</button>
+                <div id="processing-btn" onclick="addReview()" class="ui-btn ui-shadow ui-corner-all login-processing login-button">
+                    <img src="../images/loader.gif" style="display: inline-block;width: 33px;height: 33px;" alt="">
                     <p class="processing-text">Processing</p>
                 </div>
             </div>
-            <p class="Register-Account-Text">Already have an account? <a href="Login.html">Login NOW!</a></p>
+            <p class="Register-Account-Text">Already have an account? <a href="Login.html" rel="external">Login NOW!</a></p>
         </div>
-    </div><!-- /content -->
+    </div>
+    <!-- /content -->
 </body>
 <script src="../js/main.js"></script>
 
