--- a/html/guest.html
+++ b/html/guest.html
@@ -25,22 +25,21 @@
                 </div>
             </div>
 
-            <img class="Ipad-logo-size logo-image" src="../images/Logos/Transparent.png" alt="">
+            <img class="guest Ipad-logo-size logo-image" style="width: 40%;" src="../images/Logos/Transparent.png" alt="">
 
+            <iframe class="mainvideo" src="https://www.youtube.com/embed/-65PcthwjsU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class=" button-container">
-                <button class="login-button ui-btn ui-btn-inline rounded-button"><a href="Dashboard.html" rel="external">Continue As A Guest</a></button>
+                <button class="login-button ui-btn ui-btn-inline rounded-button"><a href="Dashboard.html"
+                        rel="external">Continue As A Guest</a></button>
             </div>
-
-
-
-
             <p>Have an account? <a href="Login.html" rel="external">Login</a></p>
             <p>Don't have an account? <a href="Register.html" rel="external">Register NOW!</a></p>
 
-
+            <br><br><br><br>
         </div>
     </div>
     <!-- /content -->
+
 
 
     <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
@@ -48,13 +47,13 @@
 
             <div class="footer-socicalmedia">
                 <div class="socical-media-icons">
-
+                    <img style="width: 35px;margin: auto;display: block;    margin-top: 12px;" src="../Resources/images/icons/003-facebook.png" alt="">
                 </div>
                 <div class="socical-media-icons">
-
+                    <img style="width: 35px;margin: auto;display: block;    margin-top: 12px;" src="../Resources/images/icons/001-instagram.png" alt="">
                 </div>
                 <div class="socical-media-icons">
-
+                    <img style="width: 35px;margin: auto;display: block;    margin-top: 12px;" src="../Resources/images/icons/002-twitter.png" alt="">
                 </div>
             </div>
             <!-- /grid-b -->
