--- a/html/search.html
+++ b/html/search.html
@@ -18,11 +18,11 @@
 <body>
     <div data-role="page" data-theme="d">
         <div data-role="header" class="header-class">
-           <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
+            <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
                 <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/logos/Transparent.png" border="0">
                 </a>
-                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
+                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Search</h3>
 
                 <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/icons/icons8-camera-24.png" border="0">
