--- a/html/ForgotPassword.html
+++ b/html/ForgotPassword.html
@@ -30,6 +30,7 @@
                 <button onclick="resetPassword()" class="login-button ui-btn ui-btn-inline rounded-button">Reset Password</button>
             </div>
             <p class="Register-Account-Text">Already have an account? <a href="Login.html" rel="external">Login NOW!</a></p>
+            <p class="LOGIN-page-back-to-home-thing UserNavigation User-Profile-Edit Register-Account-Text"><a href="Dashboard.html" rel="external">Take me Home</a></p>
         </div>
     </div>
 </body>
