--- a/html/Login.html
+++ b/html/Login.html
@@ -46,6 +46,7 @@
 
             <a href="ForgotPassword.html" rel="external">Forgot Password?</a>
             <p>Don't have an account? <a href="Register.html" rel="external">Register NOW!</a></p>
+            <p class="LOGIN-page-back-to-home-thing UserNavigation User-Profile-Edit Register-Account-Text"><a href="Dashboard.html" rel="external">Take me Home</a></p>
         </div>
     </div>
     <!-- /content -->
