--- a/html/Register.html
+++ b/html/Register.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
             <p class="Register-Account-Text">Already have an account? <a href="Login.html" rel="external">Login NOW!</a></p>
+            <p class="LOGIN-page-back-to-home-thing UserNavigation User-Profile-Edit Register-Account-Text"><a href="Dashboard.html" rel="external">Take me Home</a></p>
         </div>
     </div>
     <!-- /content -->
