--- a/html/ProfileNavigation.html
+++ b/html/ProfileNavigation.html
@@ -28,6 +28,7 @@
                 <li><a href="Catagories.html" rel="external">Categories</a></li>
                 <li><a href="leaderboard.html" rel="external">Leaderboard</a></li>
                 <li><a href="Orderhistory.html" rel="external">Order History</a></li>
+                <li><a href="UserProfile.html" rel="external">Edit Profile</a></li>
             </ul>
 
         </div>
@@ -40,9 +41,9 @@
 </body>
 
 <script>
-    function logout(){
-       localStorage.removeItem("email");
-       window.location = "Login.html"
+    function logout() {
+        localStorage.removeItem("email");
+        window.location = "Login.html"
     }
 
     $(document).ready(function() {
