--- a/html/guest.html
+++ b/html/guest.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
+    <title>Retaily</title>
     <link rel="stylesheet" href="../Resources/themes/main/Main-Theme.css" />
     <link rel="stylesheet" href="../Resources/themes/main/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
@@ -26,8 +26,11 @@
             </div>
 
             <img class="guest Ipad-logo-size logo-image" style="width: 40%;" src="../images/Logos/Transparent.png" alt="">
+            <p>Retaily is a multinational technology based company providing customers online shpping.The main goal of retail is help stray dogs find a home.</p>
+            <div class="videosection">
+                <iframe class="mainvideo" src="https://www.youtube.com/embed/js2iptvTNbg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <iframe class="mainvideo" src="https://www.youtube.com/embed/-65PcthwjsU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div class=" button-container">
                 <button class="login-button ui-btn ui-btn-inline rounded-button"><a href="Dashboard.html"
                         rel="external">Continue As A Guest</a></button>
